# rust-msi

./: .gitignore  Cargo.toml  README.md  index.html  rustfmt.toml  search-index.js
.github/: dependabot.yml
.github/workflows/: tests.yml
examples/: msiinfo.rs  msiquery.pest  msiquery.rs
ffi/: Cargo.toml
ffi/src/: lib.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js
implementors/core/str/: trait.FromStr.js
implementors/std/io/: trait.Read.js  trait.Write.js
msi/: CodePage.t.html  ColumnBuilder.t.html  Expr.t.html  PackageType.t.html  StreamReader.t.html  Tables.t.html  enum.CodePage.html  enum.ColumnCategory.html  enum.ColumnType.html  enum.PackageType.html  enum.Value.html  fn.open.html  fn.open_rw.html  index.html  open_rw.v.html  sidebar-items.js  struct.Column.html  struct.ColumnBuilder.html  struct.Delete.html  struct.Expr.html  struct.Insert.html  struct.Package.html  struct.Row.html  struct.Rows.html  struct.Select.html  struct.StreamReader.html  struct.StreamWriter.html  struct.Streams.html  struct.SummaryInfo.html  struct.Table.html  struct.Tables.html  struct.Update.html
msi/internal/codepage/: enum.CodePage.html
msi/internal/column/: ColumnCategory.t.html  ColumnType.t.html  enum.ColumnCategory.html  enum.ColumnType.html  struct.Column.html  struct.ColumnBuilder.html
msi/internal/expr/: struct.Expr.html
msi/internal/package/: enum.PackageType.html  struct.Package.html  struct.Tables.html
msi/internal/query/: struct.Delete.html  struct.Insert.html  struct.Select.html  struct.Update.html
msi/internal/stream/: StreamWriter.t.html  Streams.t.html  struct.StreamReader.html  struct.StreamWriter.html  struct.Streams.html
msi/internal/summary/: SummaryInfo.t.html  struct.SummaryInfo.html
msi/internal/table/: struct.Row.html  struct.Rows.html  struct.Table.html
msi/internal/value/: enum.Value.html
src/: lib.rs
src/internal/: category.rs  codepage.rs  column.rs  expr.rs  language.rs  macros.rs  mod.rs  package.rs  propset.rs  query.rs  stream.rs  streamname.rs  stringpool.rs  summary.rs  table.rs  time.rs  timestamp.rs  value.rs
src/msi/: lib.rs.html
src/msi/internal/: codepage.rs.html  column.rs.html  expr.rs.html  macros.rs.html  mod.rs.html  (+10 more)
tests/: delete.rs  select.rs  signature.rs  streams.rs  summary.rs  tables.rs  validation.rs
tests/testutil/: mod.rs
(+14 files in other folders)
