[package]
name = "msi_ffi"
version.workspace = true
authors.workspace = true
description = "Basic FFI interface for reading Windows Installer (MSI) files, using the `msi` crate."
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[lib]
name = "msi_ffi"
crate-type = ["lib", "cdylib"]

[dependencies]
chrono = "0.4.37"
msi = { version = "0.8.0", path = "../" }
safer-ffi = { version = "0.1.6", features = ["headers", "python-headers"] }
